Fixed spacing and edited bio

--- a/css/main.css
+++ b/css/main.css
@@ -480,6 +480,10 @@ footer p {
     align-items:center;
   }
 
+  .portfolio-piece p {
+    width: 100%;
+  }
+
   .portfolio-wrapper {
     justify-content: space-around;
     align-items: flex-start;
